--- a/doc/error.texi
+++ b/doc/error.texi
@@ -48,8 +48,9 @@ The error handler is the function used by LatAnalyze to report errors.
 Its default behaviour is to print an error message and then abort
 the program. User can use its own function to handle LatAnalyze errors
 using the following functions. A error handler function must have the
-@code{latan_error_handler_t} type defined in @file{latan/error.h}.
-@deftp {Data type} latan_error_handler_t
+@code{latan_error_handler_t} type defined in @file{latan/error.h}, this
+header is already included in all other LatAnalyze headers.
+@deftp{Function type} latan_error_handler_t
 A function of type @code{latan_error_handler_t} is a function that have
 the following prototype :
 @example
