--- a/doc/error.texi
+++ b/doc/error.texi
@@ -54,19 +54,19 @@ header is already included in all other LatAnalyze headers.
 A function of type @code{latan_error_handler_t} is a function that have
 the following prototype :
 @example
-void handler(const char* reason,
-             const char* file,
+void handler(const char * reason,
+             const char * file,
              int line,
              int no)
 @end example
 @end deftp
 
-@deftypefun latan_error_handler_t* latan_set_error_handler (latan_error_handler_t* new_handler)
+@deftypefun {latan_error_handler_t *} latan_set_error_handler (latan_error_handler_t* new_handler)
 This function set the error handler to @var{new_handler} and return
 the previous one.
 @end deftypefun
 
-@deftypefun latan_error_handler_t* latan_set_error_handler_off (void)
+@deftypefun {latan_error_handler_t *} latan_set_error_handler_off (void)
 This function desactivate LatAnalyze error handler and return the 
 current handler.
 @end deftypefun
