--- a/doc/latanalyze.texi
+++ b/doc/latanalyze.texi
@@ -7,7 +7,7 @@
 
 @copying
 This manual is for LatAnalyze library, version 2.0.
-Copyright @copyright{} 2010 Antonin Portelli.
+Copyright @copyright{} 2010, 2011 Antonin Portelli.
 @quotation
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.3 or
@@ -19,7 +19,7 @@ any later version published by the Free Software Foundation.
 @title LatAnalyze
 @subtitle a lattice QCD data analysis library
 @author Antonin Portelli
-Centre de Physique Th@'eorique, Universit@'e d'Aix-Marseille
+Centre de Physique Th@'eorique, Universit@'e d'Aix-Marseille, Marseille, France
 @page
 @vskip 0pt plus 1filll
 @insertcopying
